* Switched from gradients to clip-path for trimming livery on complex shaped parts (head, tail, etc). * Fixed picker clipped by clip-path.

--- a/bus.css
+++ b/bus.css
@@ -109,10 +109,10 @@ blink {
     display: inline-block;
     margin: 10px;
     border: 1px solid #eee;
-    padding: 10px;
+    padding: 10px 10px 5px;
     border-radius: 10px;
     white-space: nowrap;
-    background-color: var(--bg)!important;
+    background-color: rgba(0,0,0,25%);
 }
 
 *:has(#ddd:checked) ~ .bus {
@@ -158,9 +158,9 @@ blink {
 
 .tile.bottom,
 .picker .conditional,
-.picker .conditional  ~ * { display: none; }
+.picker .conditional  ~ label { display: none; }
 
 .shadow,
 .shadow:has(~ .picker .conditional ~ :checked):has(~ .picker :checked + .w) .bottom,
 .picker :checked + .w ~ .conditional,
-.picker :checked + .w ~ .conditional ~ * { display: inline-block; }
+.picker :checked + .w ~ .conditional ~ label { display: inline-block; }
